# Guide-me

./: .gitignore  MAP_FEATURE_README.md  README.md  YEN_INSTALLATION.md  build_wheels.py  create_distribution.py  package-lock.json
.github/workflows/: build-wheels.yml
Version1/: functionsV1.py  mainV1.py  test_connexite.py  test_prim.py
back_end/: package.json
back_end/api/: index.js
fastapi-backend/: .dockerignore  Dockerfile  README.md  check_stations.py  docker-compose.prod.yml  docker-compose.yml  requirements.txt  test_route.py
fastapi-backend/app/: main.py
fastapi-backend/app/Geojson/: Correctif.md  emplacement-des-gares-idf.geojson
fastapi-backend/app/api/: routes.py
fastapi-backend/app/core/: auto_build.py  config.py  data_loader.py  database.py  db_migration.py  station_coordinates.py
fastapi-backend/app/functions/: Normalization.md  data_loader.py  functionsV1.py  functionsV2.py  functionsV3(deprecated).py  functionsV3.py  graph_analayser.py  graph_builder.py  path_validator.py  pathfinding.py  reads_and_pickles(deprecated).py  test_paths.py  time_calculator.py  toDo.md  trajectory_selector.py
fastapi-backend/app/functions/yen_compiler/: pyproject.toml  setup.py  yen_algorithm.c  yen_algorithm.h  yen_wrapper.c  yen_wrapper.cp312-win_amd64.pyd  yen_wrapper.pyx
fastapi-backend/app/services/: metro_service.py  transport_service.py
front_end/: .env.example  index.html  package-lock.json  package.json
front_end/src/: App.vue  router.js
front_end/src/assets/: Folium vs Geemap Performance.html  metro.css
front_end/src/components/: menu.vue  (+6 more)
(+11 files in other folders)
